@@ -4,7 +4,7 @@ compile.debug=on
 compile.deprecation=off
 compile.optimize=on
 
-version=2.0rc2
+version=2.0rc3
 name=jmte
 full.name=Java Minimal Template Engine
 test.class=com.floreysoft.jmte.AllTests
